Changed h/w of images to avoid blurring

--- a/styles/index.css
+++ b/styles/index.css
@@ -73,6 +73,23 @@ body {
   display: none;
 }
 
+.Home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 85vh;
+}
+
+.hero_image {
+  width: 95vw;
+  height: 85vh;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+  border-radius: 0.5rem;
+}
+
 @media (max-width: 700px) {
   .errorMessage {
     width: 100%;
